# drake

./: .gitignore
drake/: CMakeLists.txt  package.xml
drake/bindings/: CMakeLists.txt
drake/bindings/swig/: rbtree.i
drake/core/: Path.h.in
drake/examples/Atlas/: findAtlasFixedPoint.m
drake/examples/Cars/: CMakeLists.txt
drake/examples/Pendulum/: CMakeLists.txt  PDController.m  basic_pendulum_example.m
drake/examples/Quadrotor/: CMakeLists.txt
drake/examples/Valkyrie/: findValkyrieFixedPoint.m
drake/lcmtypes/: CMakeLists.txt  lcmt_qp_controller_input.lcm
drake/solvers/: ContactImplicitFixedPointUnconstrainedProgram.m
drake/systems/controllers/: CMakeLists.txt  InstantaneousQPController.cpp  InstantaneousQPController.h  QPCommon.h  controlUtil.cpp  controlUtil.h  instantaneousQPControllermex.cpp
drake/systems/plants/: CMakeLists.txt  RigidBodyTree.cpp  RigidBodyTree.h  RigidBodyTreeURDF.cpp  parser_urdf.cc  xmlUtil.cpp  xmlUtil.h
drake/systems/robotInterfaces/: QPLocomotionPlan.cpp  QPLocomotionPlanSettings.m
drake/util/: CMakeLists.txt  drakeGeometryUtil.h  rospack.m
drake/util/control/: ActuatorDynamics.cpp  ActuatorDynamics.h  ActuatorDynamicsTest.cpp  CMakeLists.txt  SimpleActuatorDynamics.h
drake/util/filter/: AlphaFilter.cpp  AlphaFilter.hpp  CMakeLists.txt  SimpleFilter.h  (+2 more)
examples/Atlas/: Atlas.m
systems/controllers/: QPCommon.cpp
systems/plants/: TimeSteppingRigidBodyManipulator.m
systems/robotInterfaces/: QPLocomotionPlan.h  QPLocomotionPlan.m  QPLocomotionPlanSettings.m
util/: drakeGeometryUtil.cpp  drakeUtil.cpp
(+27 files in other folders)
