add_library_with_exports(LIB_NAME drakeActuatorDynamics SOURCE_FILES ActuatorDynamics.cpp)
pods_use_pkg_config_packages(drakeActuatorDynamics eigen3)
pods_install_libraries(drakeActuatorDynamics)
drake_install_headers(SimpleActuatorDynamics.h ActuatorDynamics.h)

add_executable(testActuatorDynamics ActuatorDynamicsTest.cpp)
target_link_libraries(testActuatorDynamics drakeActuatorDynamics)
pods_install_executables(testActuatorDynamics)
